# multi_hypothesis_tracking_msgs

./: .gitignore  CMakeLists.txt  README.md  package.xml
msg/: Box.msg  EvaluationBox.msg  HypothesesBoxes.msg  HypothesesBoxesArray.msg  HypothesesEvaluationBoxes.msg  HypothesesFull.msg  HypothesesPointIndices.msg  HypothesesStates.msg  ObjectDetection.msg  State.msg
