<package>
	<name>multi_hypothesis_tracking_msgs</name>
	<version>0.0.0</version>
	<description>
		Provides messages for the multi hypothesis tracking package.
	</description>

	<maintainer email="razlaw@ais.uni-bonn.de">Jan Razlaw</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>visualization_msgs</build_depend>
	<build_depend>message_generation</build_depend>	
  	
  	<run_depend>message_runtime</run_depend>
  	<run_depend>std_msgs</run_depend>
  	<run_depend>sensor_msgs</run_depend>
  	<run_depend>geometry_msgs</run_depend>
  	<run_depend>visualization_msgs</run_depend>

</package>
